Fixed clicking area in the landing page and show only vertical scrollbar for the coupon list on both pages.

--- a/details/myApp.css
+++ b/details/myApp.css
@@ -1,7 +1,8 @@
 div#couponListSide {
     margin: 0px;
     border: 1px solid grey;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: scroll;
     padding: 0px;
     width: 550px;
     height: 880px;
